--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.76.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.17",
+    "@types/react-native": "^0.72.8",
+    "typescript": "^5.7.2"
   },
   "private": true
 }
