--- a/package.json
+++ b/package.json
@@ -1,50 +1,57 @@
 {
-  "name": "waterwise",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.26.0",
-    "@expo/metro-runtime": "~4.0.0",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-firebase/app": "^21.6.1",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@react-navigation/stack": "^7.1.1",
-    "@shopify/react-native-skia": "^1.7.6",
-    "d3": "^7.9.0",
-    "expo": "^52.0.23",
-    "expo-font": "~13.0.2",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-sensors": "^14.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-svg": "15.8.0"
-  },
-  "devDependencies": {
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@types/d3": "^7.4.3",
-    "@types/react": "^18.3.18",
-    "typescript": "^5.7.2"
-  },
-  "resolutions": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@xmldom/xmldom": "^0.9.6",
-    "glob": "^11.0.0",
-    "inflight": "^1.0.6",
-    "rimraf": "^6.0.1",
-    "sudo-prompt": "^9.2.1"
-  },
-  "private": true
+    "name": "waterwise",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.26.0",
+        "@expo/metro-runtime": "~4.0.0",
+        "@expo/vector-icons": "^14.0.4",
+        "@react-native-firebase/app": "^21.6.1",
+        "@react-navigation/native": "^7.0.14",
+        "@react-navigation/native-stack": "^7.2.0",
+        "@react-navigation/stack": "^7.1.1",
+        "@shopify/react-native-skia": "^1.7.6",
+        "d3": "^7.9.0",
+        "expo": "^52.0.23",
+        "expo-clipboard": "^7.0.0",
+        "expo-font": "~13.0.2",
+        "expo-linear-gradient": "^14.0.1",
+        "expo-sensors": "^14.0.1",
+        "react": "18.3.1",
+        "react-native": "0.76.5",
+        "react-native-date-picker": "^5.0.8",
+        "react-native-element-dropdown": "^2.12.2",
+        "react-native-gesture-handler": "~2.20.2",
+        "react-native-modal-datetime-picker": "^18.0.0",
+        "react-native-reanimated": "^3.16.6",
+        "react-native-safe-area-context": "4.12.0",
+        "react-native-svg": "15.8.0",
+        "react-native-webview": "^13.12.5"
+    },
+    "devDependencies": {
+        "@react-native-community/cli": "latest",
+        "@react-native-community/datetimepicker": "^8.2.0",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+        "@types/d3": "^7.4.3",
+        "@types/react": "^18.3.18",
+        "typescript": "^5.7.2"
+    },
+    "resolutions": {
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@xmldom/xmldom": "^0.9.6",
+        "glob": "^11.0.0",
+        "inflight": "^1.0.6",
+        "rimraf": "^6.0.1",
+        "sudo-prompt": "^9.2.1"
+    },
+    "private": true
 }
