--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
         "expo-clipboard": "^7.0.0",
         "expo-font": "~13.0.2",
         "expo-linear-gradient": "^14.0.1",
+        "expo-notifications": "^0.29.11",
         "expo-sensors": "^14.0.1",
         "react": "18.3.1",
         "react-native": "0.76.5",
         "react-native-date-picker": "^5.0.8",
         "react-native-element-dropdown": "^2.12.2",
         "react-native-gesture-handler": "~2.20.2",
+        "react-native-mmkv": "^3.2.0",
         "react-native-modal-datetime-picker": "^18.0.0",
         "react-native-reanimated": "^3.16.6",
         "react-native-safe-area-context": "4.12.0",
@@ -37,7 +39,6 @@
     },
     "devDependencies": {
         "@react-native-community/cli": "latest",
-        "@react-native-community/datetimepicker": "^8.2.0",
         "@trivago/prettier-plugin-sort-imports": "^5.2.0",
         "@types/d3": "^7.4.3",
         "@types/react": "^18.3.18",
